--- a/style.css
+++ b/style.css
@@ -166,6 +166,15 @@ a:hover {
 
 /*========================================*/
 
+/* Table */
+
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #dff0d8;
+
+}
+
+/*========================================*/
+
 
 /* Footer */
 
