Added Site Layout and Grid section

--- a/style.css
+++ b/style.css
@@ -269,6 +269,31 @@ a:hover {
 /*========================================*/
 
 
+/* Grid Layout */
+
+/* From Bootstrap 3 CSS */
+.show-grid [class^=col-] {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #eee;
+    background-color: rgba(86,61,124,.15);
+    border: 1px solid #ddd;
+    border: 1px solid rgba(86,61,124,.2);
+}
+
+/*========================================*/
+
+/* From Bootstrap 3 CSS */
+.show-grid [class^=col-] {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #eee;
+    background-color: rgba(86,61,124,.15);
+    border: 1px solid #ddd;
+    border: 1px solid rgba(86,61,124,.2);
+}
+
+
 /* Footer */
 
 footer {
